hphp/hack/test/typecheck/lsb_disallow_override_public.php.legacy_decl.exp
File "lsb_disallow_override_public.php", line 8, characters 17-19:
Member $x may not override __LSB member of parent (Typing[4284])
File "lsb_disallow_override_public.php", line 4, characters 27-29:
This is being overridden
